feature: trip-service create schedule and get schedule